test-suite/tests/snapshots/cli_kpk_tests__kpk_duplicate_dependency.snap
---
source: test-suite/tests/cli_kpk_tests.rs
expression: result.stderr
---
KPK9001

  × TOML parse error at line 9, column 1
  │   |
  │ 9 | common = { path = "../other" }
  │   | ^^^^^^
  │ duplicate key
  │
